# handyconnect_backend

./: .gitignore  Cargo.toml
api/: .env  Cargo.toml
api/src/: main.rs
api/src/handlers/: base_handler.rs  handyman_handlers.rs  location_handlers.rs  lookup_data_handlers.rs  lookup_table_handlers.rs  mod.rs  rating_handlers.rs  transaction_handlers.rs  user_handlers.rs
api/src/routes/: app_routes.rs  base_routes.rs  handyman_routes.rs  location_routes.rs  lookup_data_routes.rs  lookup_table_routes.rs  mod.rs  rating_routes.rs  transaction_routes.rs  user_routes.rs
cli_testing/: Cargo.toml
cli_testing/src/: main.rs
custom_macros/: Cargo.toml
custom_macros/procedural/derive_columns_and_placeholders/: Cargo.toml
custom_macros/procedural/derive_columns_and_placeholders/src/: lib.rs
custom_macros/procedural/field_names_derive/: Cargo.toml
custom_macros/src/: lib.rs
database/: .env  Cargo.toml
database/migrations/: 20250801022534_0001_users_table.sql  20250825060939_init.sql
database/src/: postgres.rs
middlewares/: Cargo.toml
models/: Cargo.toml
models/src/: app_user.rs  column_place_holder_trait.rs  handyman.rs  lib.rs  location.rs  lookup_data.rs  lookup_table.rs  rating.rs  task.rs  transaction.rs
repositories/: Cargo.toml
repositories/src/: app_user_repo.rs  base_repo.rs  base_repo_trait.rs  handyman_repo.rs  lib.rs  location_repo.rs  lookup_data_repo.rs  lookup_table_repo.rs  rating_repo.rs  transaction_repo.rs
types/: Cargo.toml
types/src/: api_errors.rs  api_response.rs  has_id.rs  lib.rs
utils/: Cargo.toml
utils/src/: api_errors.rs  api_response.rs  app_state.rs  constants.rs  lib.rs  op_result.rs
utils/src/entity/: mod.rs  traits.rs
