[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
utils =  { path = "../utils" }
models =  { path = "../models" }
database =  { path = "../database" }
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["derive", "macros", "runtime-tokio", "tls-native-tls", "migrate", "postgres"] }
type_reflect = "0.6.2"