[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_columns_and_placeholders = { path = "../custom_macros/procedural/derive_columns_and_placeholders" }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["derive", "macros", "runtime-tokio", "tls-native-tls", "migrate", "postgres" , "uuid" ] }
types =  { path = "../types" }
chrono = { version = "0.4", features = ["serde"]}
