[package]
name = "repositories"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
models = { path = "../models" }
derive_columns_and_placeholders = { path = "../custom_macros/procedural/derive_columns_and_placeholders" }
tokio = { version = "1.47.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["derive", "macros", "runtime-tokio", "tls-native-tls", "migrate", "postgres"] }
async-trait = "0.1.88"
actix-web = "4.11.0"
