[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.17.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["derive", "macros", "runtime-tokio", "tls-native-tls", "migrate", "postgres" , "uuid" , "chrono" ] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"